# LocalScript_solution_mts_true_techhack

./: .dockerignore  .env  .env.example  .gitignore  C4.md  README.md  certificate.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
backend/: Dockerfile  agent.py  app.py  models.py  requirements.txt  test.json
backend/alembic/: env.py
backend/alembic/versions/: 2a14458e5769_make_generated_code_nullable.py  3b6f9b108c18_msg.py  5a7de63bb650_add_chats_and_messages.py  (+2 more)
backend/sandbox/: .gitattributes  Dockerfile  entrypoint.sh  sandbox_runner.lua
backend/src/: main.py
backend/uploads/: cfbb4b9f-006a-4631-af07-cef5d0de7005.txt
docs/: README.md  lua_error_handling.md  lua_functions.md  lua_modules.md  lua_strings.md  lua_tables.md  tables.txt
docs/architecture_c4/: Code.md  Components.md  Containets.md  Context.md  README.md
docs/rag_examples/: README.md  lua_modules.md  lua_strings.md  lua_tables.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
uploads/: 0f0953e0-cc40-42a7-8908-9a07e47b45ee.txt  1f6ac734-492a-4ef9-b11d-0750183b42b4.txt  24359173-75cb-4f1f-9e6e-4cee104a1cbd.txt  3ae0ffb2-3786-4a29-b1f7-19061c26e439.txt  3ae93188-fbd8-4892-bc5a-36496ee9f263.txt  5db793e0-ca1f-4078-b13f-739529f7c015.txt  7682e9b4-c494-4db3-9c86-8638ed6712d6.txt  9bea9abb-6d12-4a1f-be85-5f8f128ec4b3.txt  9cf895cb-a9dc-4076-a879-56ed4a3939f8.txt  dc526c84-604d-4309-9475-2bc55cf4b60d.txt  e053e330-29fe-49fc-9914-3837957e6666.txt
(+62 files in other folders)
